File Corruption - Singleton Implemented